--- a/src/holistic-client/public/manifest.json
+++ b/src/holistic-client/public/manifest.json
@@ -5,5 +5,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "fingerprint": "2f19edf6cf3a60f281344d5e8af119b68be45dc6"
 }
